--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="find">
         <div class="searchbar">
             <img src="/imgs/magnifying-glass.png" alt="searchIcon" width="20px">
-            <input type="text" placeholder="Find Your Country" id="searchBtn">
+            <input type="search" placeholder="Find Your Country" id="searchBtn">
         </div>
 
         <div class="selectMenu">
