--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="navbar">
-        <i><img src="/imgs/logo.png" alt="logo" style="width: 200px;"></i>
+        <a href="index.html"><img src="/imgs/logo.png" alt="logo" style="width: 200px;display: block; cursor: pointer;"></a>
        <button id="mode">
             <img src="/imgs/moon.png" id="mainicone" alt="light Mode" width="30px">
        </button>
