--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="navbar">
-        <a href="index.html"><img src="/imgs/logo.png" alt="logo" style="width: 200px;display: block; cursor: pointer;"></a>
+        <a href="index.html"><img src="imgs/logo.png" alt="logo" style="width: 200px;display: block; cursor: pointer;"></a>
        <button id="mode">
             <img src="/imgs/moon.png" id="mainicone" alt="light Mode" width="30px">
        </button>
@@ -16,14 +16,14 @@
 
     <div class="find">
         <div class="searchbar">
-            <img src="/imgs/magnifying-glass.png" alt="searchIcon" width="20px">
+            <img src="imgs/magnifying-glass.png" alt="searchIcon" width="20px">
             <input type="search" placeholder="Find Your Country" id="searchBtn">
         </div>
 
         <div class="selectMenu">
             <div class="selectBtn">
                 <span>Find By Region</span>
-                <img src="/imgs/downarrow.png" alt="" style="width: 15px;">
+                <img src="imgs/downarrow.png" alt="" style="width: 15px;">
             </div>
     
        
