--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="navbar">
         <a href="index.html"><img src="imgs/logo.png" alt="logo" style="width: 200px;display: block; cursor: pointer;"></a>
        <button id="mode">
-            <img src="/imgs/moon.png" id="mainicone" alt="light Mode" width="30px">
+            <img src="imgs/moon.png" id="mainicone" alt="light Mode" width="30px">
        </button>
     </div>
 
